--- a/animation_test_app/app/src/main/res/values/strings.xml
+++ b/animation_test_app/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">animation_test_app</string>
+    <string name="receiver_name_textView">TextView</string>
+    <string name="receiver_address_textView">TextView</string>
+    <string name="receiver_icon">receiver_icon</string>
 </resources>
